--- a/public/about/index.html
+++ b/public/about/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | Kareem Ghazi</title>
+<title>Abouts | Kareem Ghazi</title>
 <meta name="keywords" content="">
-<meta name="description" content="This is the website of Chanin Nantasenamat, Ph.D. and I create educational content on data science. Some of you may know me as the **Data Professor**.">
+<meta name="description" content="Abouts - Kareem Ghazi">
 <meta name="author" content="Chanin Nantasenamat">
-<link rel="canonical" href="http://localhost:1313/website/404.html">
+<link rel="canonical" href="http://localhost:1313/website/about/">
 <link crossorigin="anonymous" href="/website/assets/css/stylesheet.54405a410796490bc874ab6181fac9b675753cc2b91375d8f882566459eca428.css" integrity="sha256-VEBaQQeWSQvIdKthgfrJtnV1PMK5E3XY&#43;IJWZFnspCg=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/website/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/website/favicon-16x16.png">
@@ -18,7 +18,8 @@
 <link rel="mask-icon" href="http://localhost:1313/website/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/website/404.html">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/website/about/index.xml">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/website/about/">
 <noscript>
     <style>
         #theme-toggle,
@@ -58,15 +59,30 @@
 </noscript>
   
 
-<meta property="og:title" content="404 Page not found" />
+<meta property="og:title" content="Abouts" />
 <meta property="og:description" content="This is the website of Chanin Nantasenamat, Ph.D. and I create educational content on data science. Some of you may know me as the **Data Professor**." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/website/404.html" /><meta property="og:site_name" content="ChaninNantasenamat" />
+<meta property="og:url" content="http://localhost:1313/website/about/" /><meta property="og:site_name" content="ChaninNantasenamat" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="404 Page not found"/>
+<meta name="twitter:title" content="Abouts"/>
 <meta name="twitter:description" content="This is the website of Chanin Nantasenamat, Ph.D. and I create educational content on data science. Some of you may know me as the **Data Professor**."/>
 
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position":  1 ,
+      "name": "Abouts",
+      "item": "http://localhost:1313/website/about/"
+    }
+  ]
+}
+</script>
 </head>
 
 <body class="list" id="top">
@@ -112,8 +128,12 @@
         </ul>
     </nav>
 </header>
-<main class="main">
-<div class="not-found">404</div>
+<main class="main"> 
+<header class="page-header"><div class="breadcrumbs"><a href="http://localhost:1313/website/">Home</a></div>
+  <h1>
+    Abouts
+  </h1>
+</header>
     </main>
     
 <footer class="footer">
