--- a/404.html
+++ b/404.html
@@ -5,10 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | My New Hugo Site</title>
+<title>404 Page not found | Kareem Ghazi</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="This is the website of Chanin Nantasenamat, Ph.D. and I create educational content on data science. Some of you may know me as the **Data Professor**.">
+<meta name="author" content="Chanin Nantasenamat">
 <link rel="canonical" href="https://kareem-ghazi.github.io/website/404.html">
 <link crossorigin="anonymous" href="/website/assets/css/stylesheet.fc220c15db4aef0318bbf30adc45d33d4d7c88deff3238b23eb255afdc472ca6.css" integrity="sha256-/CIMFdtK7wMYu/MK3EXTPU18iN7/MjiyPrJVr9xHLKY=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://kareem-ghazi.github.io/website/favicon.ico">
@@ -59,13 +59,13 @@
   
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="This is the website of Chanin Nantasenamat, Ph.D. and I create educational content on data science. Some of you may know me as the **Data Professor**." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://kareem-ghazi.github.io/website/404.html" />
+<meta property="og:url" content="https://kareem-ghazi.github.io/website/404.html" /><meta property="og:site_name" content="ChaninNantasenamat" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="This is the website of Chanin Nantasenamat, Ph.D. and I create educational content on data science. Some of you may know me as the **Data Professor**."/>
 
 </head>
 
@@ -84,7 +84,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://kareem-ghazi.github.io/website/" accesskey="h" title="My New Hugo Site (Alt + H)">My New Hugo Site</a>
+            <a href="https://kareem-ghazi.github.io/website/" accesskey="h" title="Kareem Ghazi (Alt + H)">Kareem Ghazi</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -117,7 +117,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="https://kareem-ghazi.github.io/website/">My New Hugo Site</a></span> · 
+        <span>&copy; 2024 <a href="https://kareem-ghazi.github.io/website/">Kareem Ghazi</a></span> · 
 
     <span>
         Powered by
