--- a/experience/index.html
+++ b/experience/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Categories | Kareem Ghazi</title>
+<title>Experiences | Kareem Ghazi</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
+<meta name="description" content="Experiences - Kareem Ghazi">
 <meta name="author" content="">
-<link rel="canonical" href="https://kareem-ghazi.github.io/website/categories/">
+<link rel="canonical" href="https://kareem-ghazi.github.io/website/experience/">
 <link crossorigin="anonymous" href="/website/assets/css/stylesheet.fc220c15db4aef0318bbf30adc45d33d4d7c88deff3238b23eb255afdc472ca6.css" integrity="sha256-/CIMFdtK7wMYu/MK3EXTPU18iN7/MjiyPrJVr9xHLKY=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://kareem-ghazi.github.io/website/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://kareem-ghazi.github.io/website/favicon-16x16.png">
@@ -18,8 +18,8 @@
 <link rel="mask-icon" href="https://kareem-ghazi.github.io/website/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://kareem-ghazi.github.io/website/categories/index.xml">
-<link rel="alternate" hreflang="en" href="https://kareem-ghazi.github.io/website/categories/">
+<link rel="alternate" type="application/rss+xml" href="https://kareem-ghazi.github.io/website/experience/index.xml">
+<link rel="alternate" hreflang="en" href="https://kareem-ghazi.github.io/website/experience/">
 <noscript>
     <style>
         #theme-toggle,
@@ -59,15 +59,30 @@
 </noscript>
   
 
-<meta property="og:title" content="Categories" />
+<meta property="og:title" content="Experiences" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://kareem-ghazi.github.io/website/categories/" />
+<meta property="og:url" content="https://kareem-ghazi.github.io/website/experience/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Categories"/>
+<meta name="twitter:title" content="Experiences"/>
 <meta name="twitter:description" content=""/>
 
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position":  1 ,
+      "name": "Experiences",
+      "item": "https://kareem-ghazi.github.io/website/experience/"
+    }
+  ]
+}
+</script>
 </head>
 
 <body class="list" id="top">
@@ -127,7 +142,7 @@
             </li>
             <li>
                 <a href="https://kareem-ghazi.github.io/website/experience" title="Experience">
-                    <span>Experience</span>
+                    <span class="active">Experience</span>
                 </a>
             </li>
             <li>
@@ -149,13 +164,12 @@
         </ul>
     </nav>
 </header>
-<main class="main">
-<header class="page-header">
-    <h1>Categories</h1>
+<main class="main"> 
+<header class="page-header"><div class="breadcrumbs"><a href="https://kareem-ghazi.github.io/website/">Home</a></div>
+  <h1>
+    Experiences
+  </h1>
 </header>
-
-<ul class="terms-tags">
-</ul>
     </main>
     
 <footer class="footer">
