--- a/search/index.html
+++ b/search/index.html
@@ -131,9 +131,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://kareem-ghazi.github.io/website/" accesskey="h" title="Kareem Ghazi (Alt + H)">
-                <img src="https://kareem-ghazi.github.io/website/images/favicon.png" alt="" aria-label="logo"
-                    height="35">Kareem Ghazi</a>
+            <a href="https://kareem-ghazi.github.io/website/" accesskey="h" title="Kareem Ghazi (Alt + H)">Kareem Ghazi</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -199,7 +197,7 @@
 </header>
 
 <div id="searchbox">
-    <input id="searchInput" autofocus placeholder="Search my portfolio..."
+    <input id="searchInput" autofocus placeholder="Search my website..."
         aria-label="search" type="search" autocomplete="off" maxlength="64">
     <ul id="searchResults" aria-label="search results"></ul>
 </div>
