--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://kareem-ghazi.github.io/website/images/me.jpg" alt="AI Engineering Student" title="AI Engineering Student"
+        <img draggable="false" src="https://kareem-ghazi.github.io/website/me/me.jpg" alt="AI Engineering Student" title="AI Engineering Student"
             height="175" width="175" />
         <h1>Welcome! 👋</h1>
         <span>I’m <strong>Kareem Ghazi</strong>, a curious and passionate second-year <strong>Artificial Intelligence Engineering</strong> student at New Mansoura University, Egypt. Driven by a profound interest in Computer Vision and Robotics, I dedicate myself to exploring these fields and open to whatever comes up new.</span><div class="social-icons" >
